# chdkpano

./: README.md  blueprint.md  commands.md  multi.lua  ppmreader.py  ppmtest.ppm  rust.md  sofware_plan.md
camera/: servo.py  style.css  web.py
chdkpano/: Cargo.toml  Cross.toml  deploy.sh  pi-bootstrap.sh
chdkpano/client/: Cargo.toml  index.html  style.css
chdkpano/client/src/: main.rs  ui_dialog.rs
chdkpano/nix/: explainer.html  flake.nix
chdkpano/nix/modules/: network-base.nix  network-desk.nix  network-field.nix
chdkpano/server/: Cargo.toml
chdkpano/server/src/: app.rs  error.rs  main.rs  openapi.rs  pano.rs  static_files.rs
chdkpano/server/src/camera/: camera.rs  lua_scripts.rs  mod.rs  registry.rs
chdkpano/server/src/routes/: cameras.rs  capture.rs  exec.rs  files.rs  live_state.rs  mod.rs  pano.rs  stitch.rs  viewport.rs  wifi.rs
chdkptp/: Cargo.toml  README.md  ptp.h
chdkptp/examples/: basic_version.rs  list_devices.rs
chdkptp/src/: lib.rs
nix/: explainer.html  flake.nix
nix/darwin/: builder.nix
nix/hosts/: chdk-pi.nix
nix/modules/: chdkpano.nix  network-base.nix
nix/pkgs/: chdkpano.nix
pano/: Cargo.toml
pano/chdkptp-r921/: README-LINUX-BINARIES.TXT  README.TXT  THANKS.TXT  chdkptp_gui
pano/src/: main.rs
pano_server/: Cargo.toml  README.md
pano_server/src/: main.rs  servo.rs
panostitch/: Cargo.toml  rust-toolchain.toml
panostitch/src/: features.rs  homography.rs  main.rs  stitch.rs  warp.rs
