[package]
name = "pano_server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web server dependencies
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Local chdkptp library
chdkptp = { path = "../chdkptp" }
